--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
-    "start": "npm run lint && npm run format-check && node index.js"
+    "start": "node convert-md-to-html.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "marked": "^15.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
